--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,8 +5,8 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope 
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshop-v2-westeurope
+  LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: d0747e4b-165d-4db8-98a4-f37c2d7bda3c
   WEBAPP-NAME: devops-webapp-westeurope-58654841
