--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-eastus2
-  LOCATION: eastus2
+  RESOURCE-GROUP: rg-eshoponweb-eastus
+  LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: d0747e4b-165d-4db8-98a4-f37c2d7bda3c
-  WEBAPP-NAME: devops-webapp-eastus2-58654841
+  SUBSCRIPTION-ID: a95554c3-0c3f-4a0e-8fab-f28e7dc1beec
+  WEBAPP-NAME: devops-webapp-eastus-58654841
 
 jobs:
   #Build, test and publish .net web project in repository
