--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-eastus
-  LOCATION: eastus
+  RESOURCE-GROUP: rg-eshoponweb-westus
+  LOCATION: westus2
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: a95554c3-0c3f-4a0e-8fab-f28e7dc1beec
-  WEBAPP-NAME: devops-webapp-eastus-58654841
+  WEBAPP-NAME: devops-webapp-westus-58654841
 
 jobs:
   #Build, test and publish .net web project in repository
